# Split-LLM-Research

./: .gitignore  CLAUDE.md  pyproject.toml
memory/: MEMORY.md  project_architecture.md  project_status.md  reference_github.md
scripts/: build_proto.py  start_server.sh
split_inference/: README.md  __init__.py  config.py
split_inference/crypto/: channel.py
split_inference/local_server/: client.py  local_model.py  privacy_engine.py
split_inference/main_server/: activation_server.py  headless_llama.py  launch.py
split_inference/proto/: split_inference.proto
tests/: test_grpc_integration.py  test_headless_model.py  test_multi_arch.py  test_privacy_engine.py  test_serializer.py
